<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Instructions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="Correct: 0"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:text="Wrong: 0"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Question1"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="Gott möchte Sich durch den Menschen _______________ (Röm. 8:29)."
            android:textAllCaps="false" />

        <RadioGroup
            android:id="@+id/radiogroupQ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp">
        <RadioButton
            android:id="@+id/Q1A1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ausgedrückt" />

        <RadioButton
            android:id="@+id/Q1A2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ausgedrücken" />

        <RadioButton
            android:id="@+id/Q1A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="zum Ausdruck bringen" />
    </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitQ1"
            android:text="Submit" />

        <TextView
            android:id="@+id/Q1_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Question #2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Question2"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="Name the three parts of man (1Thes. 5:23)."
            android:textAllCaps="false" />

        <CheckBox
            android:id="@+id/checkboxQ2A1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="der Körper" />
        <CheckBox
            android:id="@+id/checkboxQ2A2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="die Seele" />
        <CheckBox
            android:id="@+id/checkboxQ2A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="der Geist" />
        <CheckBox
            android:id="@+id/checkboxQ2A4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="der Leib" />

        <Button
            android:id="@+id/submitQ2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitQ2"
            android:text="Submit" />

        <TextView
            android:id="@+id/Q2_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Question #3 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Question3Instructions"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/wire_diagram_blanks"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="Question #3"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Question3" />

        <EditText
            android:id="@+id/incarnation_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/Incarnation"
            android:inputType="textCapWords"/>

        <Button
            android:id="@+id/submitQ3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitQ3"
            android:text="Submit" />

        <TextView
            android:id="@+id/Q3_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Question 4 -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/wire_diagram_blanks"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="Question #4"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Question4" />

        <EditText
            android:id="@+id/crucifixion_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/Crucifixion"
            android:inputType="textCapWords"/>

        <Button
            android:id="@+id/submitQ4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitQ4"
            android:text="Submit" />

        <TextView
            android:id="@+id/Q4_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Question 5 -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/wire_diagram_blanks"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="Question #5"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Question5" />

        <EditText
            android:id="@+id/resurrection_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/Resurrection"
            android:inputType="textCapWords"/>

        <Button
            android:id="@+id/submitQ5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitQ5"
            android:text="Submit" />

        <TextView
            android:id="@+id/Q5_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Question 6 -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/wire_diagram_blanks"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="Question #6"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Question6" />

        <EditText
            android:id="@+id/ascension_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/Ascension"
            android:inputType="textCapWords"/>

        <Button
            android:id="@+id/submitQ6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitQ6"
            android:text="Submit" />

        <TextView
            android:id="@+id/Q6_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Question 7 -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/wire_diagram_blanks"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="Question #7"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Question7" />

        <EditText
            android:id="@+id/dispensing_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/Dispensing"
            android:inputType="textCapWords"/>

        <Button
            android:id="@+id/submitQ7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitQ7"
            android:text="Submit" />

        <TextView
            android:id="@+id/Q7_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- The button to clear up all the responses and restart the app -->

        <Button
            android:id="@+id/clearall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClear"
            android:text="Clear All" />

    </LinearLayout>
</ScrollView>